--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Kultainen Tomaatti
 email: gt@as.fi
 description: > # this means to ignore newlines until "baseurl:"
   Kultainen Tomaatti (GT) on Aalto-yliopiston Automaatio- ja systeemitekniikan killan kiltalehti.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/beta" # the subpath of your site, e.g. /blog
 url: "http://gt.as.fi" # the base hostname & protocol for your site
 
 # Build settings
