--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,7 @@ url: "http://gt.as.fi" # the base hostname & protocol for your site
 markdown: kramdown
 
 lang: fi
+
+# Remember to update when releasing a new magazine
+# Use format D/YYYY (for example 1/2017)
+latest_magazine: 1/2017
