--- a/_config.yml
+++ b/_config.yml
@@ -22,5 +22,6 @@ lang: fi
 
 # Remember to update when releasing a new magazine
 # Use format D/YYYY (for example 1/2017)
-latest_magazine: 1/2017
-latest_magazine_description: Vuoden 2017 ensimmäinen Kultainen Tomaatti julkaistiin 23.2 Automaatio- ja systeemitekniikan killan kiltakokouksessa.
+latest_magazine: Rankka/2017
+latest_magazine_description: >
+  GT:n perinteinen rankkanumero julkaistiin Automaatio- ja systeemitekniikan killan kotimaan pitkän ensimmäisenä päivänä 23.3.17
