--- a/_config.yml
+++ b/_config.yml
@@ -27,4 +27,4 @@ latest_magazine_description: >
   GT:n perinteinen rankkanumero julkaistiin Automaatio- ja systeemitekniikan killan kotimaan pitkän ensimmäisenä päivänä 23.3.17
 
 # Finally!
-wappu: true
+wappu: false
